--- a/examples/config.ini
+++ b/examples/config.ini
@@ -8,5 +8,14 @@ email_alert =
 uptime_threshold = 100
 terminate_long_running = False
 
+[hostfilter]
+hostname_whitelist =
+	web.*
+	.*db
+
+hostname_blacklist = 
+	elasticsearch\d{1,2}
+
 [DigitalOcean]
 DO_TOKEN =
+
