Remove "hostname" from config keys since it's not accurate

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -9,11 +9,11 @@ uptime_threshold = 100
 terminate_long_running = False
 
 [hostfilter]
-hostname_whitelist =
+whitelist =
 	web.*
 	.*db
 
-hostname_blacklist = 
+blacklist = 
 	elasticsearch\d{1,2}
 
 [DigitalOcean]
