--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,5 @@ python:
   - "2.7"
   - "2.6"
 
-
-# command to run tests, e.g. python setup.py test
-cd tests
-python hostfilter_test.py
+script:
+  - python test/hostfilter_test.py
